<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/zoologo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/Null"
                android:src="@drawable/foodcraft" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:text="@string/sign_in"
                    android:textColor="#2C3646"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="39dp"
                    android:layout_height="1.5dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="2dp"
                    android:background="#2C3646" />

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/create_new_account"
            android:textColor="#00051f"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="#00000000"
            android:hint="@string/text_name_upper"
            tools:ignore="Autofill"
            android:inputType="text"
            android:textColorHint="#a9b0c3"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#a9b0c3"

            />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="#00000000"
            android:hint="@string/text_email_upper"
            tools:ignore="Autofill"
            android:inputType="textEmailAddress"
            android:textColorHint="#a9b0c3"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#a9b0c3" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="#00000000"
            android:hint="@string/text_pass_upper"
            tools:ignore="Autofill"
            android:inputType="textPassword"
            android:textColorHint="#a9b0c3"
            android:textSize="13sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#a9b0c3" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="#00000000"
            android:hint="@string/text_phone_upper"
            tools:ignore="Autofill"
            android:inputType="phone"
            android:textColorHint="#a9b0c3"
            android:textSize="13sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#a9b0c3" />


        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@drawable/round"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/sign_up"
            android:textColor="#CBD1DC"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ter"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/or_sign_in"
            android:textColor="#2C3646" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/Null"
            android:src="@drawable/fb" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Null"
            android:src="@drawable/google" />

    </LinearLayout>


    <TextView
        android:id="@+id/ter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/sign_in_agreement"
        android:textColor="#a9b0c3"
        android:textSize="12sp" />


</RelativeLayout>
