<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:background="@color/grey_20"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_gravity="end">

                <LinearLayout
                    android:id="@+id/layout_price"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/food_name"
                        android:layout_marginTop="8dp"
                        android:paddingTop="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textSize="20sp"
                        tools:text="Name"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/food_price"
                        android:textSize="18sp"
                        android:layout_marginBottom="8dp"
                        android:paddingTop="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        tools:text="Price"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:id="@+id/number_button"
                        android:layout_margin="16dp"
                        app:textSize="8sp"
                        app:backGroundColor="@color/grey_80"
                        app:initialNumber="1"
                        app:finalNumber="20" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_description"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.5"
                android:padding="10dp"
                android:text="@string/title_description"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textFontWeight="600"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/food_description"
                android:layout_marginTop="48dp"
                android:lineSpacingMultiplier="1.5"
                android:padding="12dp"
                tools:text="Description"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:layout_gravity="end" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:layout_gravity="bottom"
            android:id="@+id/btnCart"
            android:text="@string/add_to_cart"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/grey_80"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:layout_gravity="bottom"
            android:id="@+id/goToCart"
            android:text="@string/go_to_cart"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/grey_80"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>